--- a/home.html
+++ b/home.html
@@ -3,19 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Atividade</title>
 </head>
 <body>
     <header>
         <nav>
+            <form class="search">
+                <input class="srch" type="search" placeholder="Digite aqui">
+                <button class="btn" type="submit">PESQUISAR</button>
+            </form>
             <ul>
                 <li><a href="contato.html">Contato</a></li>
                 <li><a href="praticas.html">Praticas</a></li>
                 <li><a href="materiais.html">Materiais</a></li>
-                <form class="search">
-                    <input class="srch" type="search" placeholder="digite aqui">
-                    <button class="btn">PESQUISAR</button>
-                </form>
+            </ul>      
         </nav>
     </header>
     <main>
