--- a/home.html
+++ b/home.html
@@ -9,11 +9,8 @@
 <body>
     <header>
         <nav>
-            <form class="search">
-                <input class="srch" type="search" placeholder="Digite aqui">
-                <button class="btn" type="submit">PESQUISAR</button>
-            </form>
             <ul>
+                <li><a href="home.html">Home</a></li>
                 <li><a href="contato.html">Contato</a></li>
                 <li><a href="praticas.html">Praticas</a></li>
                 <li><a href="materiais.html">Materiais</a></li>
@@ -21,6 +18,10 @@
         </nav>
     </header>
     <main>
+        <div class="search">
+            <input type="text" class="src" placeholder="Pesquisar">
+            <input type="button" value="Enviar">
+        </div>
         <article>
             <h1>Projeto web</h1>
             <p>este é meu prototipo</p>
